# ibcons

./: .gitignore  CMakeLists.txt  README.md
src/: aesthetics.c  aesthetics.h  main.c  main.h  networking.c  networking.h  postview.c  postview.h  winctrl.c  winctrl.h
